	  Some identation changes.
	* usecode/useval.cc: Fixed bugs #3597062 "Buying reagents from Wis-Sur is
	  broken" and #3597307 "Training in SI broken - result 0 combat points",
	  both due to hard-coding a modulus operator in a generic division/modulus
	  operator.
	* exult.cc: Fixed bug #3597039 "segfault on main menu quit with only Speech 
	  enabled audio".

2012-12-17 Dominik Reichardt <dominus@users.sourceforge.net>
	* gamemgr/bggame.cc: Only show the BG intro subtitles when audio and speech 
	  are disabled.
	
2012-12-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucinternal.cc: Fixed bug #3596110 '"Your hands are too full" even
	  when carrying no inventory'.
	* objs/contain.*, objs/objs.h: Use bool instead of int for add_quantity.
	* mapedit/shapeedit.cc: Fixed bug #3172487 "Exult Studio crash from removing
	  frame name property". Fixed incorrect pointer initialization. Also fixed
	  incorrect initialization of fields for all vector data if all entries are
	  invalid (e.g., present in static data but deleted in patch) and ensured
	  that treeview rows are only created if the element in question is not an
	  invalid one.
	* tools/expack.cc: Expack now extracts to files with 5-digit numbers, as per
	  #3163084 "Expack cannot repack extracted files using a wildcard"; however,
	  this does not mean wildcards will work in non-POSIX shells. Fixed segfault
	  when extracting from a flex file due to double delete.
	* gamewin.cc: Default back to '(default)' if could not open custom keys or
	  autonotes files. Made alignment and spacing consistent.
	* all: (rev 7211) Made alignment and spacing consistent.
	* all: (rev 7212) Applied patch #3591998 "Fixed compiler warnings".
	* all: (rev 7213) eliminated a few more warnings.
	
2012-12-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixing segfault when you change the Midi device type and
	  disable midi in one go.
	
2012-12-11	Marzo Sette Torres Junior <marzojr@yahoo.com>